Color spill error: average algorithm #45711

Closed
opened 2015-08-06 18:53:28 +02:00 by Alexey · 7 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.75 and all earlier - working with bug
2.75.4(b9ce21f) - working with bug, but with other behavior)
Worked: (None)

Short description of error
thank you for resolving mess in limiting channel settings(in simple algorithm) #45647
but we have incorrect working of limiting channel settings(in average algorithm)
1.png
2.png
3.png
4.png
5.png
Exact steps for others to reproduce the error
color spill test.blend
open, render, and repeat my test

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (2.75 and all earlier - working with bug 2.75.4(b9ce21f) - working with bug, but with other behavior) Worked: (None) **Short description of error** thank you for resolving mess in limiting channel settings(in simple algorithm) #45647 but we have incorrect working of limiting channel settings(in average algorithm) ![1.png](https://archive.blender.org/developer/F220826/1.png) ![2.png](https://archive.blender.org/developer/F220828/2.png) ![3.png](https://archive.blender.org/developer/F220830/3.png) ![4.png](https://archive.blender.org/developer/F220832/4.png) ![5.png](https://archive.blender.org/developer/F220834/5.png) **Exact steps for others to reproduce the error** [color spill test.blend](https://archive.blender.org/developer/F220838/color_spill_test.blend) open, render, and repeat my test
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Actually, changing the algorithm in the drop down menu has no effect. There seems to be some virtual function calls shenanigans happening here: it feels like since ColorSpillAverageOperation does not re-implement executePixelSampled, ColorSpillOperation::executePixelSampled is called which in turn calls ColorSpillOperation::calculateMapValue and not ColorSpillAverageOperation::calculateMapValue because ColorSpillOperation::calculateMapValue is not virtual. I might be explaining this wrong or confusingly.

The most straightforward fix would be to make ColorSpillOperation::calculateMapValue virtual, like so:

diff --git a/source/blender/compositor/operations/COM_ColorSpillOperation.h b/source/blender/compositor/operations/COM_ColorSpillOperation.h
index f9dc9ef..c1300d5 100644
--- a/source/blender/compositor/operations/COM_ColorSpillOperation.h
+++ b/source/blender/compositor/operations/COM_ColorSpillOperation.h
@@ -54,7 +54,7 @@ public:
        void setSettings(NodeColorspill *nodeColorSpill) { this->m_settings = nodeColorSpill; }
        void setSpillChannel(int channel) { this->m_spillChannel = channel; }
        
-       float calculateMapValue(float fac, float *input);
+       virtual float calculateMapValue(float fac, float *input);
 };
 
 class ColorSpillAverageOperation : public ColorSpillOperation {

Actually, changing the algorithm in the drop down menu has no effect. There seems to be some virtual function calls shenanigans happening here: it feels like since `ColorSpillAverageOperation` does not re-implement `executePixelSampled`, `ColorSpillOperation::executePixelSampled` is called which in turn calls `ColorSpillOperation::calculateMapValue` and not `ColorSpillAverageOperation::calculateMapValue` because `ColorSpillOperation::calculateMapValue` is not virtual. I might be explaining this wrong or confusingly. The most straightforward fix would be to make `ColorSpillOperation::calculateMapValue` virtual, like so: ``` diff --git a/source/blender/compositor/operations/COM_ColorSpillOperation.h b/source/blender/compositor/operations/COM_ColorSpillOperation.h index f9dc9ef..c1300d5 100644 --- a/source/blender/compositor/operations/COM_ColorSpillOperation.h +++ b/source/blender/compositor/operations/COM_ColorSpillOperation.h @@ -54,7 +54,7 @@ public: void setSettings(NodeColorspill *nodeColorSpill) { this->m_settings = nodeColorSpill; } void setSpillChannel(int channel) { this->m_spillChannel = channel; } - float calculateMapValue(float fac, float *input); + virtual float calculateMapValue(float fac, float *input); }; class ColorSpillAverageOperation : public ColorSpillOperation { ```
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 3699ab1843

This issue was referenced by 3699ab1843c399b784cb6327a6c888db81e9e6e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45711
No description provided.