Fix T45711: Color spill average algorithm broken

Thanks to @kevindietrich for finding the cause!